--- a/Style.css
+++ b/Style.css
@@ -190,6 +190,7 @@ transform: rotate(5deg); /* Rotate the image on hover */
 }
 }
 footer {
+  margin-top: 10px;
     background-color: #333;
     color: #fff;
     padding: 20px;
@@ -253,20 +254,25 @@ footer {
  opacity: 1;
   }
   form {
-    display: flex;
+    display: grid;
 flex-direction: column;
 align-items: center;
     background-color: #fff;
        border-radius: 8px;
        width: 100%;
-    max-width: 400px;   
+    max-width: 400px;  
+    gap: 10px; 
      }
+     label {
+      display: block;
+      margin-bottom: 5px;
+  }
     input, textarea {
-    width: 90%;
+      width: 100%;
     padding: 8px;
-    margin-bottom: 16px;
     box-sizing: border-box;
-    margin: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
   }
   button {
     background-color: #4caf50;
